fixed z-index of navbar

--- a/public/css/index/navbar.css
+++ b/public/css/index/navbar.css
@@ -1,6 +1,8 @@
 .page-wrapper {
   width: 100%;
   height: auto;
+  z-index: 100;
+  overflow-x: hidden;
 }
 
 .nav-wrapper {
@@ -9,6 +11,7 @@
   position: sticky;
   top: 0;
   background-color: #fff;
+  z-index: 100;
 }
 
 /* NAVIGATION */
@@ -33,7 +36,7 @@
 .navbar ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   justify-self: stretch;
 }
 
@@ -90,7 +93,7 @@
 
 .search-active {
   opacity: 1;
-  z-index: 0;
+  z-index: 1;
 }
 
 input {
@@ -207,23 +210,24 @@ input {
 
   .navbar li:first-child {
     margin-top: 10px;
-    order: 2;
-  }
-  .navbar li:nth-child(2) {
     order: 3;
   }
-  .navbar li:nth-child(3) {
+  .navbar li:nth-child(2) {
     order: 4;
   }
-  .navbar li:nth-child(4) {
+  .navbar li:nth-child(3) {
     order: 5;
   }
-  .navbar li:nth-child(5) {
-    order: 6;
+  .navbar li:nth-child(4) {
+    order: 2;
   }
+  .navbar li:nth-child(5) {
+    order: 1;
+   }
+   /*
   .navbar li:nth-child(6) {
     order: 1;
-  }
+  } */
   /* .navbar li:nth-child(7) {
       order: 8;
     }
@@ -252,6 +256,7 @@ input {
 
   .mobile-nav {
     transform: translate(0%) !important;
+    z-index: 100 !important;
   }
 
   #search-icon {
@@ -266,7 +271,22 @@ input {
     transform: translateX(-300px);
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px){
+  #search-icon {
+    display: block;
+    transform: translateX(-50px);
+    /* transform: translateY(20px); */
+  }
+  .search-input {
+    display: block;
+    opacity: 1;
+    border-bottom: 1px solid grey;
+    transform: translateX(-10px);
+    margin-bottom: 30px;
+    top: 12px;
+  }
+}
+/* @media screen and (max-width: 600px) {
   #search-icon {
     display: block;
     transform: translateX(-80px);
@@ -278,8 +298,8 @@ input {
     border-bottom: 1px solid grey;
     transform: translateX(-270px);
   }
-}
-@media screen and (max-width: 550px) {
+} */
+/* @media screen and (max-width: 550px) {
   #search-icon {
     display: block;
     transform: translateX(-95px);
@@ -291,8 +311,8 @@ input {
     border-bottom: 1px solid grey;
     transform: translateX(-270px);
   }
-}
-@media screen and (max-width: 510px) {
+} */
+/* @media screen and (max-width: 510px) {
   #search-icon {
     display: block;
     transform: translateX(-125px);
@@ -304,8 +324,8 @@ input {
     border-bottom: 1px solid grey;
     transform: translateX(-250px);
   }
-}
-@media screen and (max-width: 410px) {
+} */
+/* @media screen and (max-width: 410px) {
   #search-icon {
     display: block;
     transform: translateX(-125px);
@@ -317,8 +337,8 @@ input {
     border-bottom: 1px solid grey;
     transform: translateX(-200px);
   }
-}
-@media screen and (max-width: 320px) {
+} */
+/* @media screen and (max-width: 320px) {
   #search-icon {
     display: block;
     transform: translateX(-125px);
@@ -330,8 +350,8 @@ input {
     border-bottom: 1px solid grey;
     transform: translateX(-180px);
   }
-}
-@media screen and (max-width: 270px) {
+} */
+/* @media screen and (max-width: 270px) {
   #search-icon {
     display: block;
     transform: translateX(-115px);
@@ -343,7 +363,7 @@ input {
     border-bottom: 1px solid grey;
     transform: translateX(-150px);
   }
-}
+} */
 #search_list1 {
   display: none;
   margin-top: 20px;
